# example-knative-websockets

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  chat.html
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml
src/: main.rs
