[package]
name = "example-websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws"] }
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
